编写分页功能和排序功能

--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -79,12 +79,12 @@
 
 	<div class="center_con clearfix">
 		<ul class="subnav fl">
-			<li><a href="/Goods/list1_0" class="fruit">新鲜水果</a></li>
-			<li><a href="/Goods/list2_0" class="seafood">海鲜水产</a></li>
-			<li><a href="/Goods/list3_0" class="meet">猪牛羊肉</a></li>
-			<li><a href="/Goods/list4_0" class="egg">禽类蛋品</a></li>
-			<li><a href="/Goods/list5_0" class="vegetables">新鲜蔬菜</a></li>
-			<li><a href="/Goods/list6_0" class="ice">速冻食品</a></li>
+			<li><a href="/Goods/list1_0_1" class="fruit">新鲜水果</a></li>
+			<li><a href="/Goods/list2_0_1" class="seafood">海鲜水产</a></li>
+			<li><a href="/Goods/list3_0_1" class="meet">猪牛羊肉</a></li>
+			<li><a href="/Goods/list4_0_1" class="egg">禽类蛋品</a></li>
+			<li><a href="/Goods/list5_0_1" class="vegetables">新鲜蔬菜</a></li>
+			<li><a href="/Goods/list6_0_1" class="ice">速冻食品</a></li>
 		</ul>
 		<div class="slide fl">
 			<ul class="slide_pics">
@@ -114,7 +114,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1}}</a>
                 {% endfor %}
 			</div>
-			<a href="/Goods/list{{ fruit.0.gtype.id }}" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/Goods/list{{ fruit.0.gtype.id }}_0_1" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -126,7 +126,7 @@
 
                     <h4><a href="/Goods/{{ fpic.id }}/">{{ fpic.gtitle.split.1 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}/"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
 
                 </li>
                 {% endfor %}
@@ -146,7 +146,7 @@
                 {% endfor %}
 
 			</div>
-			<a href="/Goods/list{{ fish.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ fish.0.gtype.id }}_0_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -157,7 +157,7 @@
                 <li>
                     <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
 
@@ -175,7 +175,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="/Goods/list{{ meal.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ meal.0.gtype.id }}_0_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -186,7 +186,7 @@
                 <li>
                     <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
 			</ul>
@@ -203,7 +203,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="/Goods/list{{ eggs.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ eggs.0.gtype.id }}_0_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -214,7 +214,7 @@
                 <li>
                     <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.0 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
 			</ul>
@@ -231,7 +231,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="/Goods/list{{ vege.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ vege.0.gtype.id }}_0_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -242,7 +242,7 @@
                 <li>
                     <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.1 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
 			</ul>
@@ -259,7 +259,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="/Goods/list{{ fastFrozen.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ fastFrozen.0.gtype.id }}_0_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -270,7 +270,7 @@
                 <li>
                     <h4><a href="/Goods/{{ fpic.id }}">{{ fpic.gtitle.split.0 }}</a></h4>
                     <a href="/Goods/{{ fpic.id }}"><img src="/static/media/{{ fpic.gpic }}"></a>
-                    <div class="prize">{{ fpic.gprice }}</div>
+                    <div class="prize">￥{{ fpic.gprice }}</div>
                 </li>
                 {% endfor %}
 			</ul>
