--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -3,15 +3,7 @@
     <title>天天生鲜-商品列表</title>
 {% endblock title %}
 {% block head %}
-{#    <script type="text/javascript">#}
-{#        $(function () {#}
-{#            var sort = $(".sort_bar");#}
-{#            sort.delegate('a','click',function () {#}
-{#                $(this).addClass("active").siblings().removeClass("active");#}
-{#            })#}
-{#        })#}
-{##}
-{#    </script>#}
+
 {% endblock head %}
 {% block body %}
 
@@ -57,12 +49,13 @@
 				<h1>全部商品分类</h1>	
 				<span></span>			
 				<ul class="subnav">
-					<li><a href="/Goods/list1_0" class="fruit">新鲜水果</a></li>
-					<li><a href="/Goods/list2_0" class="seafood">海鲜水产</a></li>
-					<li><a href="/Goods/list3_0" class="meet">猪牛羊肉</a></li>
-					<li><a href="/Goods/list4_0" class="egg">禽类蛋品</a></li>
-					<li><a href="/Goods/list5_0" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="/Goods/list6_0" class="ice">速冻食品</a></li>
+{#                    list后面第一个数字为商品type，第二个为排序方法，第三个为页码#}
+					<li><a href="/Goods/list1_0_1" class="fruit">新鲜水果</a></li>
+					<li><a href="/Goods/list2_0_1" class="seafood">海鲜水产</a></li>
+					<li><a href="/Goods/list3_0_1" class="meet">猪牛羊肉</a></li>
+					<li><a href="/Goods/list4_0_1" class="egg">禽类蛋品</a></li>
+					<li><a href="/Goods/list5_0_1" class="vegetables">新鲜蔬菜</a></li>
+					<li><a href="/Goods/list6_0_1" class="ice">速冻食品</a></li>
 				</ul>
 			</div>
 			<ul class="navlist fl">
@@ -78,7 +71,7 @@
 	<div class="breadcrumb">
 		<a href="#">全部分类</a>
 		<span>></span>
-		<a href="#">{{ type.ttile }}</a>
+		<a href="#">{{ goods2.0.gtype.ttile }}</a>
 	</div>
 
 	<div class="main_wrap clearfix">
@@ -101,16 +94,16 @@
 
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="/Goods/list{{ goods.0.gtype.id }}_0"
+				<a href="/Goods/list{{ goods2.0.gtype.id }}_0_1"
                 {% if sort == "0" %}class="active" {% endif %}>默认</a>
-				<a href="/Goods/list{{ goods.0.gtype.id }}_1"
+				<a href="/Goods/list{{ goods2.0.gtype.id }}_1_1"
                 {% if sort == "1" %}class="active" {% endif %}>价格</a>
-				<a href="/Goods/list{{ goods.0.gtype.id }}_2"
+				<a href="/Goods/list{{ goods2.0.gtype.id }}_2_1"
                 {% if sort == "2" %}class="active" {% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
-                {% for good in goods %}
+                {% for good in page %}
                     <li style="text-align: center">
                     <a href="/Goods/{{ good.id }}"><img src="/static/media/{{ good.gpic }}"></a>
                     <h4><a href="/Goods/{{ good.id }}">{{ good.gtitle.split.1 }}</a></h4>
@@ -121,11 +114,19 @@
 
 			<div class="pagenation">
 				<a href="#">上一页</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#">5</a>
+                {% for i in pagenum %}
+                    {% if i == pi %}
+                    <a href="" class="active">{{ i }}</a>
+                    {% else %}
+                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ i }}">{{ i }}</a>
+                    {% endif %}
+                {% endfor %}
+
+{#				<a href="#" class="active">1</a>#}
+{#				<a href="#">2</a>#}
+{#				<a href="#">3</a>#}
+{#				<a href="#">4</a>#}
+{#				<a href="#">5</a>#}
 				<a href="#">下一页</a>
 			</div>
 		</div>
