--- a/ttsx_xm/templates/Goods/detail.html
+++ b/ttsx_xm/templates/Goods/detail.html
@@ -102,12 +102,12 @@
 				<h1>全部商品分类</h1>
 				<span></span>
 				<ul class="subnav">
-					<li><a href="/Goods/list1_0" class="fruit">新鲜水果</a></li>
-					<li><a href="/Goods/list2_0" class="seafood">海鲜水产</a></li>
-					<li><a href="/Goods/list3_0" class="meet">猪牛羊肉</a></li>
-					<li><a href="/Goods/list4_0" class="egg">禽类蛋品</a></li>
-					<li><a href="/Goods/list5_0" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="/Goods/list6_0" class="ice">速冻食品</a></li>
+					<li><a href="/Goods/list1_0_1" class="fruit">新鲜水果</a></li>
+					<li><a href="/Goods/list2_0_1" class="seafood">海鲜水产</a></li>
+					<li><a href="/Goods/list3_0_1" class="meet">猪牛羊肉</a></li>
+					<li><a href="/Goods/list4_0_1" class="egg">禽类蛋品</a></li>
+					<li><a href="/Goods/list5_0_1" class="vegetables">新鲜蔬菜</a></li>
+					<li><a href="/Goods/list6_0_1" class="ice">速冻食品</a></li>
 				</ul>
 			</div>
 			<ul class="navlist fl">
@@ -124,7 +124,7 @@
 		<a href="/">全部分类</a>
 		<span>></span>
 {#        点击跳转到对应list#}
-		<a href="/Goods/list{{ goods.gtype.id }}/">{{ goods.gtype }}</a>
+		<a href="/Goods/list{{ goods.gtype.id }}_0_1/">{{ goods.gtype }}</a>
 		<span>></span>
 		<a href="#">商品详情</a>
 	</div>
