--- a/ttsx_xm/templates/Order/place_order.html
+++ b/ttsx_xm/templates/Order/place_order.html
@@ -5,7 +5,6 @@
 {% endblock title %}
 
 {% block head %}
-    <script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
     <script src="/static/js/order.js"></script>
 
 {% endblock head %}
@@ -48,7 +47,7 @@
             <input type="button" class="input_btn fr" name="" value="搜索">
         </div>
     </div>
-    <form action="handle_order/" method="post" id="handleorder">
+    <form action="handle_order/" method="post">
         <h3 class="common_title">确认收货地址</h3>
 
         <div class="common_list_con clearfix">
@@ -145,16 +144,9 @@
         <div class="order_submit clearfix">
 
             <input type="submit" value="提交订单" id="order_btn">
-{#            <input type="hidden" value="{{ status }}" id="status">#}
 
         </div>
     </form>
-    <div class="popup_con">
-        <div class="popup">
-            <p>订单提交成功！</p>
-        </div>
 
-        <div class="mask"></div>
-    </div>
 {% endblock body %}
 
