--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -701,3 +701,69 @@ appearance:none;
 -moz-appearance:none; /* Firefox */
 -webkit-appearance:none; /* Safari 和 Chrome */
 }
+.forget{
+	width: 1000px;
+	height: 500px;
+	border: 1px solid #cecece;
+	margin: 10px auto 0px;
+
+}
+.box{
+	width: 380px;
+	height: 75px;
+	display: inline-block;
+	margin: 30px 30px 30px 150px;
+}
+.tubiao{
+	display: inline-block;
+}
+.hhh{
+	display: inline-block;
+	height: 70px;
+	border-left: 2px solid #37ab40;
+	font-size: 34px;
+	line-height: 100px;
+	color: #37ab40;
+}
+.find{
+	height: 100px;
+	text-align: center;
+}
+.find h2{
+	width: 950px;
+	margin: auto;
+	font-size: 34px;
+	line-height: 100px;
+	border-bottom: 2px solid #cecece;
+	font-family:'Microsoft Yahei'
+}
+
+.text{
+	width: 400px;
+	height: 200px;
+	margin: auto;
+	margin-top: 50px;
+}
+.reset_text{
+	font-size: 16px;
+	margin: 10px 0;
+}
+.text_in{
+	display: block;
+	width: 350px;
+	height: 40px;
+	margin: 10px 0px;
+	outline-color: #37ab40;
+	text-indent: 5px;
+}
+.sub{
+	width: 350px;
+	height: 35px;
+	background-color:#47aa34;
+	margin-top: 20px;
+	color:#fff;
+	border: 0px;
+	font-size: 16px;
+}
+
+
