--- a/ttsx_xm/templates/Order/submitorder.html
+++ b/ttsx_xm/templates/Order/submitorder.html
@@ -9,13 +9,15 @@
     <script src="/static/js/submit.js"></script>
 </head>
 <body>
-    <div class="popup_con">
-        <input type="hidden" id="status" value={{ status }}>
-        <div class="popup">
-            <p>订单提交成功！</p>
-        </div>
+<div class="popup_con">
+    <input type="hidden" id="status" value={{ status }}>
+    <div class="popup">
+        <p>订单提交成功！</p>
 
-        <div class="mask"></div>
+        <h4><span id="count">3</span>秒后自动跳转</h4>
     </div>
+
+    <div class="mask"></div>
+</div>
 </body>
 </html>
