--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -95,11 +95,11 @@
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
 				<a href="/Goods/list{{ goods2.0.gtype.id }}_0_1"
-                {% if sort == "0" %}class="active" {% endif %}>默认</a>
+                {% if sort == 0 %} class="active" {% endif %}>默认</a>
 				<a href="/Goods/list{{ goods2.0.gtype.id }}_1_1"
-                {% if sort == "1" %}class="active" {% endif %}>价格</a>
+                {% if sort == 1 %} class="active" {% endif %}>价格</a>
 				<a href="/Goods/list{{ goods2.0.gtype.id }}_2_1"
-                {% if sort == "2" %}class="active" {% endif %}>人气</a>
+                {% if sort == 2 %} class="active" {% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
@@ -107,7 +107,11 @@
                     <li style="text-align: center">
                     <a href="/Goods/{{ good.id }}"><img src="/static/media/{{ good.gpic }}"></a>
                     <h4><a href="/Goods/{{ good.id }}">{{ good.gtitle.split.1 }}</a></h4>
-                    <div class="prize">￥{{ good.gprice }}</div>
+                    <div class="operate">
+						<span class="prize">￥{{ good.gprice }}</span>
+						<span class="unit">{{ good.gunit }}</span>
+						<a href="#" class="add_goods" title="加入购物车"></a>
+					</div>
                     </li>
                 {% endfor %}
 			</ul>
