--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -491,7 +491,10 @@ html,body{height:100%}
     line-height:50px;
     text-align:center;
     color:#666;
-	font-size:18px;
+	font-size:14px;
+}
+#count{
+	color:red;
 }
 
 .mask{width:100%;height:100%;position:fixed;left:0;top:0;background-color:#000;opacity:0.3;z-index:999;}
@@ -513,13 +516,13 @@ html,body{height:100%}
 	line-height:40px;
 	border-bottom:1px solid #ddd;
 	text-align:center;
-	margin-bottom:10px;
+	margin-bottom:12px;
 }
 
 .left_menu_con ul li{
 	line-height:40px;
 	text-align:center;
-	font-size:14px;
+	font-size:8px;
 }
 
 .left_menu_con ul li a{
