--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -3,7 +3,49 @@
     <title>天天生鲜-商品列表</title>
 {% endblock title %}
 {% block head %}
+<script type="text/javascript">
+    $(function () {
+{#            设置立即购买点击动画效果#}
 
+{#            获取购物车绝对位置#}
+                var carLeft = $(".cart_name").offset().left;
+                var carTop = $(".cart_name").offset().top;
+
+{#            购物车宽高#}
+                var mvInCarLeft = carLeft + $(".cart_name").outerWidth()/2 - 25;
+                var mvInCarTop = carTop + $(".cart_name").outerHeight()/2 - 25;
+
+{#            立即购买点击事件#}
+            $(".add_goods").click(function () {
+{#                图片动画#}
+{#            获取按钮绝对坐标#}
+                var addLeft = $(this).offset().left;
+                var addTop = $(this).offset().top;
+
+{#            获取按钮宽高#}
+                var addWidth = $(this).outerWidth();
+                var addHight = $(this).outerHeight();
+
+{#            图片初始位置#}
+                var mvLeft = addLeft + addWidth/2 - 25;
+                var mvTop = addTop + addHight/2 -25;
+
+{#                设置图片路径,记得在a标签用一个属性保存图片路径，在这根据属性获取路径#}
+                $(".mv img").prop('src','/static/media/'+$(this).attr('title'));
+                $(".mv").css({'left':mvLeft,'top':mvTop}).show();
+                $(".mv").animate({
+                    width:50,
+                    height:50,
+                    left:mvInCarLeft,
+                    top:mvInCarTop
+                },1000,'swing',function () {
+                    $(".mv").hide();
+{#                    图片消失，数量加一#}
+                    $(".goods_count").html(parseInt($(".goods_count").html())+1);
+                });
+            });
+    })
+</script>
 {% endblock head %}
 {% block body %}
 
@@ -110,7 +152,7 @@
                     <div class="operate">
 						<span class="prize">￥{{ good.gprice }}</span>
 						<span class="unit">{{ good.gunit }}</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
+						<a href="#" class="add_goods" title="{{ good.gpic }}"></a>
 					</div>
                     </li>
                 {% endfor %}
@@ -134,6 +176,10 @@
 				<a href="#">下一页</a>
 			</div>
 		</div>
+        <div class="mv" style="display: none;width: 50px;height: 50px;
+                                position: fixed;left: 0;top: 0;z-index: 10000;border-radius: 50%;">
+            <img src="/static/images/goods/goods001.jpg" style="width: auto;height: auto;max-width: 100%;max-height: 100%">
+        </div>
 	</div>
 
 {% endblock body %}
