--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -21,11 +21,11 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="/User/user_center_info/">用户中心</a>
+					<a href="/User/center_info/">用户中心</a>
 					<span>|</span>
 					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="/User/user_center_order/">我的订单</a>
+					<a href="/User/user_order/">我的订单</a>
 				</div>
 			</div>
 		</div>		
