--- a/ttsx_xm/templates/User/user_center_info.html
+++ b/ttsx_xm/templates/User/user_center_info.html
@@ -3,18 +3,24 @@
         <title>天天生鲜-用户中心</title>
     {% endblock title %}
     {% block head %}
+        <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
         <script type="text/javascript">
         $(function () {
             $.get('/Goods/getname/', function (data) {
-                if(data.uname != null){
+                if (data.uname != null) {
                     $('#user').html(data.uname)
                     $(".login_info").show();
                     $(".login_btn").hide();
                 }
-                else{
+                else {
                     $(".login_info").hide();
                     $(".login_btn").show();
                 }
+            });
+            var name = $.cookie('uname')
+            alert(typeof (name))
+            $.post('/User/recent_scan/', function (data) {
+                alert(data.type)
             });
         });
         </script>
