--- a/ttsx_xm/templates/search/search.html
+++ b/ttsx_xm/templates/search/search.html
@@ -1,10 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+    <title>天天生鲜-搜索结果</title>
+{% endblock title %}
+{% block head %}
+<script src="/static/js/list.js"></script>
+{% endblock head %}
+{% block body %}
 
-</body>
-</html>
+	<div class="header_con">
+		<div class="header">
+			<div class="welcome fl">欢迎来到天天生鲜!</div>
+			<div class="fr">
+				<div class="login_info fl">
+					欢迎您：<em>张 山</em>
+				</div>
+				<div class="login_btn fl">
+					<a href="/User/login/">登录</a>
+					<span>|</span>
+					<a href="/User/register/">注册</a>
+				</div>
+				<div class="user_link fl">
+					<span>|</span>
+					<a href="/User/user_center_info/">用户中心</a>
+					<span>|</span>
+					<a href="/Cart/cart/">我的购物车</a>
+					<span>|</span>
+					<a href="/User/user_center_order/">我的订单</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="search_bar clearfix">
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+		<div class="search_con fl">
+			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
+			<input type="button" class="input_btn fr" name="" value="搜索">
+		</div>
+		<div class="guest_cart fr">
+			<a href="#" class="cart_name fl">我的购物车</a>
+            <div class="goods_count fl">0</div>
+		</div>
+	</div>
+
+	<div class="navbar_con">
+		<div class="navbar clearfix">
+			<div class="subnav_con fl">
+				<h1>全部商品分类</h1>
+				<span></span>
+				<ul class="subnav">
+{#                    list后面第一个数字为商品type，第二个为排序方法，第三个为页码#}
+					<li><a href="/Goods/list1_0_1" class="fruit">新鲜水果</a></li>
+					<li><a href="/Goods/list2_0_1" class="seafood">海鲜水产</a></li>
+					<li><a href="/Goods/list3_0_1" class="meet">猪牛羊肉</a></li>
+					<li><a href="/Goods/list4_0_1" class="egg">禽类蛋品</a></li>
+					<li><a href="/Goods/list5_0_1" class="vegetables">新鲜蔬菜</a></li>
+					<li><a href="/Goods/list6_0_1" class="ice">速冻食品</a></li>
+				</ul>
+			</div>
+			<ul class="navlist fl">
+				<li><a href="/">首页</a></li>
+				<li class="interval">|</li>
+				<li><a href="">手机生鲜</a></li>
+				<li class="interval">|</li>
+				<li><a href="">抽奖</a></li>
+			</ul>
+		</div>
+	</div>
+
+    <div class="main_wrap clearfix">
+        <div class="r_wrap fr clearfix">
+            <ul class="goods_type_list clearfix">
+                {% for good in page %}
+                    <li style="text-align: center" id="{{ good.object.id }}">
+                    <a href="/Goods/{{ good.object.id }}"><img src="/static/media/{{ good.object.gpic }}"></a>
+                    <h4><a href="/Goods/{{ good.object.id }}">{{ good.object.gtitle.split.1 }}</a></h4>
+                    <div class="operate">
+                        <span class="prize">￥{{ good.object.gprice }}</span>
+                        <span class="unit">{{ good.object.gunit }}</span>
+                        <a href="#" class="add_goods" title="{{ good.object.gpic }}"></a>
+                    </div>
+                    </li>
+                {% endfor %}
+            </ul>
+
+            <div class="pagenation">
+                {% if page.has_previous %}
+                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.previous_page_number }}">上一页</a>
+                {% endif %}
+                {% for i in pagenum %}
+                    {% if i == pi %}
+                    <a href="" class="active">{{ i }}</a>
+                    {% else %}
+                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ i }}">{{ i }}</a>
+                    {% endif %}
+                {% endfor %}
+
+                {% if page.has_next %}
+                <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.next_page_number }}">下一页</a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="mv" style="display: none;width: 50px;height: 50px;
+                                position: fixed;left: 0;top: 0;z-index: 10000;border-radius: 50%;">
+            <img src="/static/images/goods/goods001.jpg" style="width: auto;height: auto;max-width: 100%;max-height: 100%">
+        </div>
+    </div>
+
+
+
+
+
+
+{% endblock body %}
