--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="/User/center_info/">用户中心</a>
+					<a href="/User/user_center/">用户中心</a>
 					<span>|</span>
 					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
