--- a/ttsx_xm/templates/Cart/cart.html
+++ b/ttsx_xm/templates/Cart/cart.html
@@ -3,7 +3,134 @@
     {% block title %}
 	<title>天天生鲜-购物车</title>
     {% endblock title %}
+    {% block head %}
 
+
+    <script>
+        $(function () {
+
+            jisuan();
+{#            $('.check_all input').click(jisuan);#}
+{#            $('.col01 input').click(jisuan);#}
+            $(':checkbox:not(#check_all)').click(jisuan);
+            $('#check_all').click(jisuan);
+            function jisuan() {
+    {#                计算价格#}
+                total1=0;
+                totals=0;
+                $('.col07').each(function () {
+{#                    数量#}
+                    count = $(this).prev().find('input').val();
+{#                    单价#}
+                    price = $(this).prev().prev().text();
+    {#                   每一件的价格#}
+                    total=parseInt(count)*parseFloat(price);
+{#                    赋值给价格#}
+                    $(this).text(total.toFixed(2));
+
+{#                    total = 1000;#}
+                    {#                    小计#}
+{#                    if($(this).sibling(‘input[checked]’)){#}
+                    var flag = $(this).parents("ul").find(".col01").find("input").prop("checked");
+                    if(flag) {
+                        total1+=total;
+    {#                                            循环次说就等于总的商品数量#}
+                        totals+=1;
+                    }
+
+
+                });
+                console.log(total1);
+                var $priceEm = $(".zongjine");
+                console.log($priceEm);
+                $priceEm.html(total1.toFixed(2));
+{#                $priceEm.html(1000);#}
+                $(".totals").text(totals);
+
+                }
+
+{#                单件商品默认为1#}
+
+{#                    添加商品数量#}
+            $('.add').click(function () {
+                txt = $(this).next();
+                if (txt.val()<100) {
+                    txt.val(parseFloat(txt.val()) + 1);
+                    }
+                    cart_id=$(this).parents('.cart_list_td').attr('id');
+                    count=$(this).next().val();
+
+                    $.get("/Cart/edit/",{'cartid':cart_id,'counts':count},function (data) {
+{#                        $.(data.count)#}
+                    });
+                    jisuan();
+                    });
+
+
+
+{#                    减少数量#}
+            $('.minus').click(function () {
+                txt = $(this).prev();
+                if(txt.val()>1){
+                    txt1=parseFloat(txt.val());
+                    txt.val(txt1-1) }
+                    cart_id=$(this).parents('.cart_list_td').attr('id');
+                    count=$(this).prev().val();
+                    $.get("/Cart/edit/",{'cartid':cart_id,'counts':count});
+                jisuan();
+            });
+
+{#            手动修改数量#}
+            $('.num_show ').blur(function () {
+                count=$(this).val();
+                if(count < 1){
+                    $(this).val(1);
+                }
+                if(count>100){
+                    $(this).val(100)
+                }
+                cart_id=$(this).parents('.cart_list_td').attr('id');
+                count=$(this).val();
+                $.get('/Cart/edit/',{'cartid':cart_id,'counts':count});
+                jisuan();
+
+            });
+
+
+{#                 勾选点击事件#}
+{#            总的勾选#}
+            $('#check_all').click(function () {
+                state=$(this).prop('checked');
+                $(':checkbox:not(#check_all)').prop('checked',state)
+            });
+
+{#            单个勾选#}
+            $(':checkbox:not(#check_all)').click(function () {
+                if ($(this).prop('checked')){
+                    if ($(':checked').length+1==$(':checkbox').length){
+
+                        $('#check_all').prop('checked',true);
+                    }
+                }
+                else{
+                    $('#check_all').prop('checked',false);
+                }
+            });
+
+{#            点击删除#}
+            $('.col08').click(function () {
+
+                $(this).parents('.cart_list_td').remove();
+                cart_id=$(this).parents('.cart_list_td').attr('id');
+
+                $.get('/Cart/remove/',{'cart':cart_id},function (data) {
+{#                    alert('成功删除');#}
+                })
+            })
+
+        });
+        </script>
+    {% endblock head %}
 {% block body %}
 	<div class="header_con">
 		<div class="header">
@@ -30,7 +157,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="/Goods/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -38,7 +165,7 @@
 		</div>		
 	</div>
 
-	<div class="total_count">全部商品<em>2</em>件</div>	
+	<div class="total_count ">全部商品<em class="totals">2</em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -47,46 +174,37 @@
 		<li class="col05">小计</li>
 		<li class="col06">操作</li>
 	</ul>
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="/static/images/goods/goods012.jpg"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
 
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="/static/images/goods/goods003.jpg"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
-	
 
-	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
-		<li class="col02">全选</li>
-		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="place_order.html">去结算</a></li>
-	</ul>
+    {% for cart in carts %}
+        <form action="/Order/" method="GET">
+            <ul class="cart_list_td clearfix " id="{{ cart.id }}" goodsid="{{ cart.goods.id }}">
+                <li class="col01"><input type="checkbox" name="goodsid" checked="" value="{{ cart.goods.id }}"></li>
+                <li class="col02"><img src="/static/images/{{ cart.goods.gpic }}"></li>
+                <li class="col03">{{ cart.goods.gtitle }}<br><em>{{ cart.goods.gprice }}/500g</em></li>
+                <li class="col04">500g</li>
+                <li class="col05">{{ cart.goods.gprice }}元</li>
+                <li class="col06">
+                {#            商品数量#}
+
+                    <div class="num_add">
+                        <a href="javascript:;" class="add fl">+</a>
+                        <input type="text" class="num_show fl" value= "{{ cart.count }}">
+                        <a href="javascript:;" class="minus fl">-</a>
+                    </div>
+                </li>
+                <li class="col07">元</li>
+                <li class="col08"><a href="javascript:;">删除</a></li>
+            </ul>
+
+            {% endfor %}
+
+            <ul class="settlements">
+                <li class="col01"><input id="check_all" type="checkbox" name="" checked=""></li>
+                <li class="col02">全选</li>
+                <li class="col03">合计(不含运费)：<span>¥</span><em class="zongjine"></em><br>共计<b class="totals"></b>件商品</li>
+                <li class="col04"><input type="submit" name="" value="去结算"></li>
+            </ul>
+        </form>
 
 {% endblock body %}
