--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -7,31 +7,7 @@
 {% endblock head %}
 {% block body %}
 
-	<div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="/User/login/">登录</a>
-					<span>|</span>
-					<a href="/User/register/">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="/User/user_center_info/">用户中心</a>
-					<span>|</span>
-					<a href="/Cart/cart/">我的购物车</a>
-					<span>|</span>
-					<a href="/User/user_center_order/">我的订单</a>
-				</div>
-			</div>
-		</div>		
-	</div>
-
-	<div class="search_bar clearfix">
+    <div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -118,18 +94,20 @@
 
 			<div class="pagenation">
                 {% if page.has_previous %}
-                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.previous_page_number }}">上一页</a>
+                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_1">首页</a>
+                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.number|add:-1 }}">上一页</a>
                 {% endif %}
 
                 {% for i in pagenum %}
-                    {% if i == pi %}
+                    {% if i == page.number %}
                     <a href="" class="active">{{ i }}</a>
                     {% else %}
                     <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ i }}">{{ i }}</a>
                     {% endif %}
                 {% endfor %}
                 {% if page.has_next %}
-                <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.next_page_number }}">下一页</a>
+                <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.number|add:1 }}">下一页</a>
+                <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.paginator.num_pages }}">尾页</a>
                 {% endif %}
 			</div>
 		</div>
