--- a/ttsx_xm/templates/search/search.html
+++ b/ttsx_xm/templates/search/search.html
@@ -1,37 +1,14 @@
+
 {% extends 'base.html' %}
 {% block title %}
-    <title>天天生鲜-搜索结果</title>
+    <title>天天生鲜-商品列表</title>
 {% endblock title %}
 {% block head %}
 <script src="/static/js/list.js"></script>
 {% endblock head %}
 {% block body %}
 
-	<div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="/User/login/">登录</a>
-					<span>|</span>
-					<a href="/User/register/">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="/User/user_center_info/">用户中心</a>
-					<span>|</span>
-					<a href="/Cart/cart/">我的购物车</a>
-					<span>|</span>
-					<a href="/User/user_center_order/">我的订单</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="search_bar clearfix">
+    <div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -68,48 +45,51 @@
 		</div>
 	</div>
 
-    <div class="main_wrap clearfix">
-        <div class="r_wrap fr clearfix">
-            <ul class="goods_type_list clearfix">
-                {% for good in page %}
-                    <li style="text-align: center" id="{{ good.object.id }}">
-                    <a href="/Goods/{{ good.object.id }}"><img src="/static/media/{{ good.object.gpic }}"></a>
-                    <h4><a href="/Goods/{{ good.object.id }}">{{ good.object.gtitle.split.1 }}</a></h4>
-                    <div class="operate">
-                        <span class="prize">￥{{ good.object.gprice }}</span>
-                        <span class="unit">{{ good.object.gunit }}</span>
-                        <a href="#" class="add_goods" title="{{ good.object.gpic }}"></a>
-                    </div>
-                    </li>
-                {% endfor %}
-            </ul>
+	<div class="breadcrumb">
+		<a href="#">全部分类</a>
+		<span>></span>
+        <a href="#">搜索<span>></span> {{ query }}</a>
+	</div>
 
-            <div class="pagenation">
-                {% if page.has_previous %}
-                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.previous_page_number }}">上一页</a>
-                {% endif %}
-                {% for i in pagenum %}
-                    {% if i == pi %}
-                    <a href="" class="active">{{ i }}</a>
-                    {% else %}
-                    <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ i }}">{{ i }}</a>
-                    {% endif %}
-                {% endfor %}
+	<div class="main_wrap clearfix">
 
-                {% if page.has_next %}
-                <a href="/Goods/list{{ goods2.0.gtype.id }}_{{ sort }}_{{ page.next_page_number }}">下一页</a>
+        <ul class="goods_type_list clearfix">
+            {% for goods in page %}
+                <li style="text-align: center" id="{{ goods.object.id }}">
+                <a href="/Goods/{{ goods.object.id }}"><img src="/static/media/{{ goods.object.gpic }}"></a>
+                <h4><a href="/Goods/{{ goods.object.id }}">{{ goods.object.gtitle.split.1 }}</a></h4>
+                <div class="operate">
+                    <span class="prize">￥{{ goods.object.gprice }}</span>
+                    <span class="unit">{{ goods.object.gunit }}</span>
+                    <a href="javascript:;" class="add_goods" title="{{ goods.object.gpic }}"></a>
+                </div>
+                </li>
+            {% endfor %}
+        </ul>
+
+        <div class="pagenation">
+            {% if page.has_previous %}
+                <a href="/search/?q={{ query }}&page=1">首页</a>
+                <a href="/search/?q={{ query }}&page={{ page.number|add:-1 }}">上一页</a>
+            {% endif %}
+
+            {% for i in paginator.page_range %}
+                {% if i ==  page.number  %}
+                <a href="" class="active">{{ i }}</a>
+                {% else %}
+                <a href="/search/?q={{ query }}&page={{ i }}">{{ i }}</a>
                 {% endif %}
-            </div>
-        </div>
-        <div class="mv" style="display: none;width: 50px;height: 50px;
-                                position: fixed;left: 0;top: 0;z-index: 10000;border-radius: 50%;">
-            <img src="/static/images/goods/goods001.jpg" style="width: auto;height: auto;max-width: 100%;max-height: 100%">
+            {% endfor %}
+            {% if page.has_next %}
+            <a href="/search/?q={{ query }}&page={{ page.number|add:1 }}">下一页</a>
+            <a href="/search/?q={{ query }}&page={{ paginator.num_pages }}">尾页</a>
+            {% endif %}
         </div>
     </div>
 
+    <div class="mv" style="display: none;width: 50px;height: 50px;
+                       position: absolute;left: 0;top: 0;z-index: 10000;border-radius: 50%;">
+        <img src="/static/images/goods/goods001.jpg" style="width: auto;height: auto;max-width: 100%;max-height: 100%">
 
-
-
-
-
+	</div>
 {% endblock body %}
