--- a/ttsx_xm/templates/User/register.html
+++ b/ttsx_xm/templates/User/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'basebox.html' %}
     {% block title %}
     <title>天天生鲜-注册</title>
     {% endblock title %}
