--- a/ttsx_xm/templates/User/forget.html
+++ b/ttsx_xm/templates/User/forget.html
@@ -19,7 +19,7 @@
             <h2>输入账号</h2>
             </div>
 
-            <form class="text" method="post" action="/User/reset_send/">
+            <form class="forget_text" method="post" action="/User/reset_send/">
                 <p class="reset_text">请输入要重置密码的帐号</p>
                 <input type="text" name="userName" class="text_in" placeholder="请输入账户名"/>
                 <input type="submit" class="sub" value="下 一 步"/>
