--- a/ttsx_xm/templates/User/reset.html
+++ b/ttsx_xm/templates/User/reset.html
@@ -19,7 +19,7 @@
             <h2>输入密码</h2>
             </div>
 
-            <form class="text" method="post" action="/User/reset_pwd/">
+            <form class="forget_text" method="post" action="/User/reset_pwd/">
                 <p class="reset_text">请设置{{ uname }}的新密码，建议使用数字、字母、字符的组合密码，提高密码安全等级</p>
                 <input type="hidden" name="uname" value="{{ uname }}"/>
                 <input type="password" name="user_pwd" class="text_in" placeholder="请输入新密码"/>
