--- a/ttsx_xm/templates/User/user_center_site.html
+++ b/ttsx_xm/templates/User/user_center_site.html
@@ -24,7 +24,7 @@
                 $.get('/User/showAdd/',{'uname':name},function (data) {
                 var value =data.value;
                 if(value=='none'){
-                    $('.tishi').css('display', 'block')
+                    $('.add_btn').css('display', 'block')
                 }
                 var list =value.list;
                 var thead =value.thead;
@@ -54,7 +54,7 @@
                         if(data.type){
                             clear();
                             $('.site_con').css('display','none');
-                            $('.tishi').css('display', 'none');
+                            $('.add_btn').css('display', 'none');
                             f5();
                         };
                     });
@@ -67,7 +67,7 @@
                         };
                     });
                 }
-                $('.tishi').hide();
+                $('.add_btn').hide();
             });
             $('.x').click(function () {
                 $('.site_con').css('display','none');
@@ -109,7 +109,7 @@
                 });
             });
 
-            $('.tishi').click(function () {
+            $('.add_btn').click(function () {
                 $('.site_con').css('display','block');
             })
 
@@ -140,7 +140,7 @@
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">收货地址</h3>
-                <input type="button" class="tishi" value="新 增 地 址">
+                <input type="button" class="add_btn" value="新 增 地 址">
 				<div class="site_cont">
 
 				</div>
