--- a/ttsx_xm/templates/User/user_center_site.html
+++ b/ttsx_xm/templates/User/user_center_site.html
@@ -135,9 +135,9 @@
 				</div>
 
 				<div class="site_con">
-                    <h3 class="common_title2">&emsp;编辑地址</h3>
+                    <h3 class="common_title2 dialog-title">&emsp;编辑地址</h3>
                     <img src="/static/images/x.png" class="x fr">
-					<form>
+					<form class="dialog-content">
                         <input type="hidden" class="hidden" value="">
 						<div class="form_group">
 							<label>收件人：</label>
@@ -159,3 +159,6 @@
 	</div>
 
 {% endblock body %}
+{% block bottom %}
+    <script src="/static/js/moving.js"></script>
+{% endblock bottom %}
