--- a/ttsx_xm/templates/Order/submitorder.html
+++ b/ttsx_xm/templates/Order/submitorder.html
@@ -11,6 +11,7 @@
 <body>
 <div class="popup_con">
     <input type="hidden" id="status" value={{ status }}>
+    <input type="hidden" id="gid" value={{ gid }}>
     <div class="popup">
         <p>订单提交成功！</p>
         <div class="buy">
