修改全部订单显示

--- a/ttsx_xm/templates/User/user_center_order.html
+++ b/ttsx_xm/templates/User/user_center_order.html
@@ -21,7 +21,7 @@
 			<h3>用户中心</h3>
 			<ul>
 				<li><a href="/User/user_center/">· 个人信息</a></li>
-				<li><a href="/User/user_order/" class="active">· 全部订单</a></li>
+				<li><a href="/User/user_order_1/" class="active">· 全部订单</a></li>
 				<li><a href="/User/user_site/">· 收货地址</a></li>
 			</ul>
 		</div>
@@ -31,7 +31,11 @@
             <ul class="order_list_th w978 clearfix">
                 <li class="col01">{{ item.order.odate }}</li>
                 <li class="col02">{{ item.order.oid }}</li>
-                <li class="col02 stress">{{ item.order.oIsPay }}</li>
+                {% if item.order.oIsPay %}
+                <li class="col02 stress">已付款</li>
+                {% else %}
+                <li class="col02 stress">已付款</li>
+                {% endif %}
             </ul>
 
             <table class="order_list_table w980">
@@ -49,8 +53,13 @@
                         </td>
 
                         <td width="15%">{{ item.order.ototal }}</td>
-                        <td width="15%">{{ item.order.oIsPay }}付款</td>
+                        {% if item.order.oIsPay %}
+                        <td width="15%">已付款</td>
+                        <td width="15%"><a href="#" class="oper_btn">查物流</a>
+                        {% else %}
+                        <td width="15%">未付款</td>
                         <td width="15%"><a href="#" class="oper_btn">去付款</a></td>
+                        {% endif %}
                     </tr>
                 </tbody>
             </table>
