--- a/ttsx_xm/templates/Cart/cart.html
+++ b/ttsx_xm/templates/Cart/cart.html
@@ -124,6 +124,7 @@
                 $.get('/Cart/remove/',{'cart':cart_id},function (data) {
 {#                    alert('成功删除');#}
                 })
+                jisuan();
             })
 
         });
